# lotus

./: .bazelrc  .gitignore  BUILD.bazel  CODEOWNERS  Gopkg.toml  LICENSE  Makefile  NOTICE.md  README.md  WORKSPACE  go.mod  go.sum  image.bzl  jsonnetfile.lock.json  pgv_proto_library.bzl  repositories.bzl
cmd/: BUILD.bazel  image.bzl
cmd/example/: BUILD.bazel  main.go
cmd/lotus/: BUILD.bazel  main.go
cmd/util/: BUILD.bazel  main.go
docs/: README.md  configurations.md  development.md  faq.md  fqa.md  life-of-lotus-crd.md  lotus-crd-configurations.md
examples/: README.md  simple-grpc-scenario.yaml  simple-http-scenario.yaml  three-steps-scenario.yaml  virtualuser-scenario.yaml
examples/helloworld/: deployment.yaml  service.yaml
hack/: BUILD.bazel  boilerplate.go.txt  generate-dashboards.sh  generate-manifests.sh  print-workspace-status.sh  push.sh  tools.go  update-codegen.sh
install/: README.md  manifest-generate-values-norbac.yaml  manifest-generate-values.yaml
install/dashboard-templates/: common.jsonnet  grpc-dashboard.jsonnet  http-dashboard.jsonnet  panels.jsonnet
install/helm/: Chart.yaml  requirements.yaml  values.yaml
install/helm/dashboards/: grpc-dashboard.json  http-dashboard.json
install/helm/templates/: _helpers.tpl  controller-config-configmap.yaml  controller-deployment.yaml  controller-rbac.yaml  crd.yaml  grafana-dashboards-configmap.yaml  grafana-datasources-configmap.yaml  prometheus-rbac.yaml
install/manifests/: controller-config-configmap.yaml  controller-deployment.yaml  controller-rbac.yaml  grafana-clusterrole.yaml  grafana-clusterrolebinding.yaml  grafana-configmap.yaml  grafana-deployment.yaml  grafana-podsecuritypolicy.yaml  grafana-role.yaml  grafana-rolebinding.yaml  grafana-service.yaml  grafana-serviceaccount.yaml  prometheus-rbac.yaml
install/manifests-norbac/: controller-deployment.yaml  crd.yaml  grafana-configmap-dashboard-provider.yaml  grafana-dashboards-configmap.yaml  grafana-datasources-configmap.yaml  grafana-deployment.yaml  grafana-secret.yaml
pkg/app/example/cmd/helloworld/: BUILD.bazel  helloworld.go
pkg/app/example/cmd/simplegrpc/: BUILD.bazel  scenario.go
pkg/app/example/cmd/simplehttp/: BUILD.bazel  scenario.go
pkg/app/example/cmd/threesteps/: BUILD.bazel  scenario.go
pkg/app/example/cmd/virtualuser/: BUILD.bazel  scenario.go  user.go
pkg/app/example/helloworld/: BUILD.bazel  helloworld.proto
pkg/app/lotus/apis/lotus/: BUILD.bazel  register.go
pkg/app/lotus/apis/lotus/v1beta1/: BUILD.bazel  doc.go  register.go  types.go  zz_generated.deepcopy.go
pkg/app/lotus/client/clientset/versioned/: BUILD.bazel  clientset.go  doc.go
pkg/app/lotus/client/clientset/versioned/fake/: BUILD.bazel  clientset_generated.go  doc.go  register.go
pkg/app/lotus/client/clientset/versioned/scheme/: BUILD.bazel  doc.go  register.go
pkg/app/lotus/client/clientset/versioned/typed/lotus/v1beta1/: BUILD.bazel  doc.go  generated_expansion.go  lotus.go  lotus_client.go
pkg/app/lotus/client/clientset/versioned/typed/lotus/v1beta1/fake/: BUILD.bazel  doc.go  fake_lotus.go  fake_lotus_client.go
pkg/app/lotus/client/informers/externalversions/: BUILD.bazel  factory.go  generic.go
pkg/app/lotus/client/informers/externalversions/internalinterfaces/: BUILD.bazel  factory_interfaces.go
pkg/app/lotus/client/informers/externalversions/lotus/: BUILD.bazel  interface.go
pkg/app/lotus/client/informers/externalversions/lotus/v1beta1/: BUILD.bazel  interface.go  lotus.go
pkg/app/lotus/client/listers/lotus/v1beta1/: BUILD.bazel  expansion_generated.go  lotus.go
pkg/app/lotus/cmd/controller/: BUILD.bazel  controller.go
pkg/app/lotus/cmd/monitor/: BUILD.bazel  monitor.go
pkg/app/lotus/config/: BUILD.bazel  config.go  config.proto  config_test.go
pkg/app/lotus/config/testdata/: valid.yaml
pkg/app/lotus/controller/: BUILD.bazel  controller.go  controller_test.go
pkg/app/lotus/datasource/: BUILD.bazel  datasource.go
pkg/app/lotus/datasource/prometheus/: BUILD.bazel  builder.go  prometheus.go  prometheus_test.go  query.go
pkg/app/lotus/datasource/registry/: BUILD.bazel  registry.go
pkg/app/lotus/kubeclient/: BUILD.bazel  kubeclient.go  kubeclient_test.go
pkg/app/lotus/model/: BUILD.bazel  lotus.go  metrics_summary.go  render.go  render_test.go  result.go  templates.go
pkg/app/lotus/reporter/: BUILD.bazel  reporter.go  reporter_test.go
pkg/app/lotus/reporter/azure/: BUILD.bazel  azure.go
pkg/app/lotus/reporter/gcs/: BUILD.bazel  gcs.go
pkg/app/lotus/reporter/logger/: BUILD.bazel  logger.go
pkg/app/lotus/reporter/registry/: BUILD.bazel  registry.go
pkg/app/lotus/reporter/s3/: BUILD.bazel  s3.go
pkg/app/lotus/reporter/slack/: BUILD.bazel  slack.go
pkg/app/lotus/resource/: BUILD.bazel  factory.go  job.go  prometheus.go  secret.go  static_factory.go  templates.go  templates_test.go  thanos.go  worker.go
pkg/app/util/cmd/lotuswaiter/: BUILD.bazel  lotuswaiter.go  wait.go  wait_test.go
pkg/cli/: BUILD.bazel  app.go  cmd.go  cmd_test.go
pkg/log/: BUILD.bazel  log.go  log_test.go
pkg/metrics/: BUILD.bazel  logger.go  metrics.go  metrics_test.go
pkg/metrics/grpcmetrics/: BUILD.bazel  common.go  grpc.go  grpc_stats.go
pkg/metrics/httpmetrics/: BUILD.bazel  http.go  http_stats.go
pkg/version/: BUILD.bazel  def.bzl  version.go
pkg/virtualuser/: BUILD.bazel  virtualuser.go  virtualuser_test.go
