load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/lotusload/lotus/cmd/lotus",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/app/lotus/cmd/controller:go_default_library",
        "//pkg/app/lotus/cmd/monitor:go_default_library",
        "//pkg/cli:go_default_library",
    ],
)

go_binary(
    name = "lotus",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

load("@io_bazel_rules_docker//go:image.bzl", "go_image")

go_image(
    name = "image",
    binary = ":lotus",
    visibility = ["//visibility:public"],
)
