load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/lotusload/lotus/cmd/util",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/app/util/cmd/lotuswaiter:go_default_library",
        "//pkg/cli:go_default_library",
    ],
)

go_binary(
    name = "util",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

load("//:image.bzl", "app_image")

app_image(
    name = "util",
    binary = ":util",
    repository = "lotus-util",
    visibility = ["//visibility:public"],
)
