load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "app.go",
        "cmd.go",
    ],
    importpath = "github.com/lotusload/lotus/pkg/cli",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/log:go_default_library",
        "//pkg/version:go_default_library",
        "@com_github_spf13_cobra//:go_default_library",
        "@org_uber_go_zap//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    size = "small",
    srcs = ["cmd_test.go"],
    embed = [":go_default_library"],
    deps = [
        "@com_github_spf13_cobra//:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@org_uber_go_zap//:go_default_library",
    ],
)
