load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("//pkg/version:def.bzl", "version_x_defs")

go_library(
    name = "go_default_library",
    srcs = ["version.go"],
    importpath = "github.com/lotusload/lotus/pkg/version",
    visibility = ["//visibility:public"],
    x_defs = version_x_defs(),
)
