load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["virtualuser.go"],
    importpath = "github.com/lotusload/lotus/pkg/virtualuser",
    visibility = ["//visibility:public"],
    deps = [
        "@io_opencensus_go//stats:go_default_library",
        "@io_opencensus_go//stats/view:go_default_library",
        "@io_opencensus_go//tag:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    size = "small",
    srcs = ["virtualuser_test.go"],
    embed = [":go_default_library"],
)
