load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "http.go",
        "http_stats.go",
    ],
    importpath = "github.com/nghialv/lotus/pkg/metrics/httpmetrics",
    visibility = ["//visibility:public"],
    deps = [
        "@io_opencensus_go//stats:go_default_library",
        "@io_opencensus_go//stats/view:go_default_library",
        "@io_opencensus_go//tag:go_default_library",
    ],
)
