proto_library(
    name = "config_proto",
    srcs = ["config.proto"],
    visibility = ["//visibility:public"],
    #keep
    deps = [
        "@com_github_envoyproxy_protoc_gen_validate//validate:validate_proto",
    ],
)

load("//:pgv_proto_library.bzl", "pgv_go_proto_library")

pgv_go_proto_library(
    name = "config_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_proto"],
    proto = ":config_proto",
    importpath = "github.com/lotusload/lotus/pkg/config",
)

load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["config.go"],
    embed = [":config_go_proto"],
    importpath = "github.com/lotusload/lotus/pkg/app/lotus/config",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/app/lotus/apis/lotus/v1beta1:go_default_library",
        "@com_github_ghodss_yaml//:go_default_library",
        "@com_github_golang_protobuf//jsonpb:go_default_library_gen",
    ],
)

go_test(
    name = "go_default_test",
    size = "small",
    srcs = ["config_test.go"],
    data = glob(["testdata/**"]),
    embed = [":go_default_library"],
    deps = [
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
    ],
)
