load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["controller.go"],
    importpath = "github.com/lotusload/lotus/pkg/app/lotus/controller",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/app/lotus/apis/lotus/v1beta1:go_default_library",
        "//pkg/app/lotus/client/clientset/versioned:go_default_library",
        "//pkg/app/lotus/client/clientset/versioned/scheme:go_default_library",
        "//pkg/app/lotus/client/informers/externalversions/lotus/v1beta1:go_default_library",
        "//pkg/app/lotus/client/listers/lotus/v1beta1:go_default_library",
        "//pkg/app/lotus/config:go_default_library",
        "//pkg/app/lotus/kubeclient:go_default_library",
        "//pkg/app/lotus/model:go_default_library",
        "//pkg/app/lotus/resource:go_default_library",
        "@io_k8s_api//apps/v1:go_default_library",
        "@io_k8s_api//core/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/api/errors:go_default_library",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime/schema:go_default_library",
        "@io_k8s_apimachinery//pkg/util/runtime:go_default_library",
        "@io_k8s_apimachinery//pkg/util/wait:go_default_library",
        "@io_k8s_client_go//informers/batch/v1:go_default_library",
        "@io_k8s_client_go//kubernetes:go_default_library",
        "@io_k8s_client_go//kubernetes/scheme:go_default_library",
        "@io_k8s_client_go//kubernetes/typed/core/v1:go_default_library",
        "@io_k8s_client_go//tools/cache:go_default_library",
        "@io_k8s_client_go//tools/record:go_default_library",
        "@io_k8s_client_go//util/workqueue:go_default_library",
        "@org_uber_go_zap//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    size = "small",
    srcs = ["controller_test.go"],
    embed = [":go_default_library"],
)
