load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["datasource.go"],
    importpath = "github.com/lotusload/lotus/pkg/app/lotus/datasource",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/app/lotus/config:go_default_library",
        "//pkg/app/lotus/model:go_default_library",
        "@org_uber_go_zap//:go_default_library",
    ],
)
