load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "lotus.go",
        "metrics_summary.go",
        "render.go",
        "result.go",
        "templates.go",
    ],
    importpath = "github.com/lotusload/lotus/pkg/app/lotus/model",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/app/lotus/apis/lotus/v1beta1:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime/schema:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    size = "small",
    srcs = ["render_test.go"],
    embed = [":go_default_library"],
    deps = [
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
    ],
)
