load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["monitor.go"],
    importpath = "github.com/nghialv/lotus/pkg/app/lotus/cmd/monitor",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/app/lotus/config:go_default_library",
        "//pkg/app/lotus/datasource:go_default_library",
        "//pkg/app/lotus/datasource/registry:go_default_library",
        "//pkg/app/lotus/model:go_default_library",
        "//pkg/app/lotus/reporter:go_default_library",
        "//pkg/app/lotus/reporter/registry:go_default_library",
        "//pkg/cli:go_default_library",
        "@com_github_spf13_cobra//:go_default_library",
        "@org_uber_go_zap//:go_default_library",
    ],
)
