load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["registry.go"],
    importpath = "github.com/lotusload/lotus/pkg/app/lotus/datasource/registry",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/app/lotus/config:go_default_library",
        "//pkg/app/lotus/datasource:go_default_library",
        "//pkg/app/lotus/datasource/prometheus:go_default_library",
    ],
)
