load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["logger.go"],
    importpath = "github.com/nghialv/lotus/pkg/app/lotus/reporter/logger",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/app/lotus/config:go_default_library",
        "//pkg/app/lotus/model:go_default_library",
        "//pkg/app/lotus/reporter:go_default_library",
        "@org_uber_go_zap//:go_default_library",
    ],
)
