load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["registry.go"],
    importpath = "github.com/nghialv/lotus/pkg/app/lotus/reporter/registry",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/app/lotus/config:go_default_library",
        "//pkg/app/lotus/reporter:go_default_library",
        "//pkg/app/lotus/reporter/gcs:go_default_library",
        "//pkg/app/lotus/reporter/logger:go_default_library",
        "//pkg/app/lotus/reporter/slack:go_default_library",
    ],
)
