load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "lotuswaiter.go",
        "wait.go",
    ],
    importpath = "github.com/lotusload/lotus/pkg/app/util/cmd/lotuswaiter",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/app/lotus/apis/lotus/v1beta1:go_default_library",
        "//pkg/app/lotus/client/clientset/versioned:go_default_library",
        "//pkg/cli:go_default_library",
        "@com_github_spf13_cobra//:go_default_library",
        "@io_k8s_apimachinery//pkg/api/errors:go_default_library",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
        "@io_k8s_client_go//tools/clientcmd:go_default_library",
        "@org_uber_go_zap//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    size = "small",
    srcs = ["wait_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//pkg/app/lotus/apis/lotus/v1beta1:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@io_k8s_apimachinery//pkg/api/errors:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime/schema:go_default_library",
        "@org_uber_go_zap//:go_default_library",
    ],
)
